--- a/current_attendance.html
+++ b/current_attendance.html
@@ -83,9 +83,9 @@
                 <th>User Name</th>
                 <th>Entering Timestamp</th>
                 <th>Leaving Timestamp</th>
-                <th>Alcohol Content (BAC)</th>
+                <th>Alcohol Content</th>
                 <th>Temperature</th>
-                <th></th>
+                <th></th> <!-- Empty title for delete icon -->
             </tr>
         </thead>
         <tbody>
